# DexDP3

./: LICENSE  README.md
Dex-3D-Diffusion-Policy/3D-Diffusion-Policy/: deploy.py
Dex-3D-Diffusion-Policy/diffusion_policy_3d/config/task/: realdex_grasp.yaml  realdex_push.yaml
Dex-3D-Diffusion-Policy/scripts/: deploy_policy.sh  test_ros_network.py
Dex-3D-Diffusion-Policy/visualizer/: check_zarr_dataset.py  visualize_pointcloud.py
SA_Workspace/.catkin_tools/profiles/default/: devel_collisions.txt
SA_Workspace/src/: control.py
SA_Workspace/src/Allegro-Hand-Controller-DIME/src/allegro_hand/: CMakeLists.txt
SA_Workspace/src/Allegro-Hand-Controller-DIME/src/allegro_hand/launch/: allegro_with_manus.launch
SA_Workspace/src/Allegro-Hand-Controller-DIME/src/allegro_hand/scripts/: ManusToAllegro.py  joint_states_mapper.py
SA_Workspace/src/Allegro-Hand-Controller-DIME/src/allegro_hand_controllers/src/: allegro_node.cpp
SA_Workspace/src/Allegro-Hand-Controller-DIME/src/allegro_hand_parameters/: initial_position.yaml
SA_Workspace/src/allegro_franka_model/src/urdf/: frankaAllegro.xml
SA_Workspace/src/data_collection/: package.xml
SA_Workspace/src/data_collection/src/: aruco_extrinsic.py  generatePointCloud.py  merge_episodes.py  process_data.py
SA_Workspace/src/drivers/peak-linux-driver-8.18.0/driver/: .Module.symvers.cmd  .modules.order.cmd  .pcan.ko.cmd  .pcan.mod.cmd  .pcan.mod.o.cmd  .pcan.o.cmd  dkms.conf  modules.order  pcan.mod  pcan.mod.c
SA_Workspace/src/drivers/peak-linux-driver-8.18.0/driver/src/: .pcan_common.o.cmd  .pcan_fifo.o.cmd  .pcan_filter.o.cmd  .pcan_fops.o.cmd  .pcan_isa.o.cmd  .pcan_main.o.cmd  .pcan_parse.o.cmd  .pcan_pci.o.cmd  .pcan_pci_spi.o.cmd  .pcan_pciec.o.cmd  .pcan_sja1000.o.cmd  .pcan_timing.o.cmd  .pcan_usb.o.cmd  .pcan_usb_core.o.cmd  .pcan_usbpro.o.cmd  .pcanfd_core.o.cmd  .pcanfd_pci.o.cmd  .pcanfd_ucan.o.cmd  .pcanfd_usb.o.cmd
SA_Workspace/src/drivers/peak-linux-driver-8.18.0/lib/lib/: libpcan.so.6  libpcanfd.so.8
SA_Workspace/src/drivers/peak-linux-driver-8.18.0/test/: bitratetest  filtertest  pcanfdtst  receivetest  transmitest
SA_Workspace/src/frankaAllegro_moveit_config/: CMakeLists.txt
SA_Workspace/src/frankaAllegro_moveit_config/config/: FrankaAllegro.srdf  controllers.yaml  joint_limits.yaml  ros_controllers.yaml  servo_config.yaml
SA_Workspace/src/frankaAllegro_moveit_config/launch/: franka_allegro_real.launch  moveit.rviz  real_robot.launch  ros_controllers.launch  startwithhand.launch
SA_Workspace/src/frankaAllegro_moveit_config/scripts/: add_scene.py
SA_Workspace/src/franka_dynamic_tracking/: CMakeLists.txt  README.md  package.xml
SA_Workspace/src/franka_dynamic_tracking/config/: parameters.yaml
SA_Workspace/src/franka_dynamic_tracking/launch/: scene_manager.launch
SA_Workspace/src/franka_dynamic_tracking/src/: combined_state_publisher.py  end_effector_tracking.cpp  end_effector_tracking.py  pose_publisher.py
SA_Workspace/src/manus_ros-main/: .clang-format  .gitignore  CHANGELOG.md  README.md
SA_Workspace/src/manus_ros-main/manus_ros_driver/: CMakeLists.txt  package.xml
SA_Workspace/src/manus_ros-main/manus_ros_driver/ManusSDK/include/: ManusSDK.h  ManusSDKTypeInitializers.h  ManusSDKTypes.h
SA_Workspace/src/manus_ros-main/manus_ros_driver/include/: ClientLogging.hpp  ClientPlatformSpecific.hpp  ClientPlatformSpecificTypes.hpp  SDKClient.hpp
SA_Workspace/src/manus_ros-main/manus_ros_driver/src/: ClientPlatformSpecific.cpp  SDKClient.cpp  main.cpp
