<?xml version="1.0"?>
<package>
  <name>franka_dynamic_tracking</name>
  <version>0.0.0</version>
  <description>-</description>

  <maintainer email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</maintainer>
  <author email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <run_depend>moveit_core</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>moveit_ros_planning</build_depend>
  <run_depend>moveit_ros_planning</run_depend>

  <build_depend>bio_ik</build_depend>
  <run_depend>bio_ik</run_depend>

  <build_depend>moveit_ros_robot_interaction</build_depend>
  <run_depend>moveit_ros_robot_interaction</run_depend>

  <build_depend>moveit_ros_planning_interface</build_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>tf2</build_depend>
  <run_depend>tf2</run_depend>

  <build_depend>tf2_geometry_msgs</build_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  
  <build_depend>tf2_eigen</build_depend>
  <run_depend>tf2_eigen</run_depend>

  <build_depend>visualization_msgs</build_depend>
  <run_depend>visualization_msgs</run_depend>




  <export>
  </export>

</package>
